syntax = "proto3";

package location;

option go_package = "/";

message LocationRequest {
    string username = 1;
    double latitude = 2;
    double longitude = 3;
    int64 timestamp = 4;
}

message LocationResponse {
    string status = 1;
}

message TravelDistanceRequest {
    string username = 1;
    string start = 2;
    string end = 3;
}

message TravelDistanceResponse {
    double distance = 1;
}

service LocationService {
    rpc UpdateLocation(LocationRequest) returns (LocationResponse);
    rpc CalculateTravelDistance(TravelDistanceRequest) returns (TravelDistanceResponse);
}